--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "author": "Abiola",
   "license": "MIT",
   "devDependencies": {
+    "@types/connect-sqlite3": "^0.9.5",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^20.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -21,14 +24,17 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
+    "connect-sqlite3": "^0.9.15",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.11.8",
     "mongoose": "^7.1.1",
+    "morgan": "^1.10.0",
     "yup": "^1.4.0"
   },
   "scripts": {
